@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007 IBM Corporation and others.
+ * Copyright (c) 2007, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -38,7 +38,7 @@ public class NumberToIntegerConverter extends NumberToNumberConverter implements
 	@Override
 	protected Number doConvert(Number number) {
 		if (StringToNumberParser.inIntegerRange(number)) {
-			return new Integer(number.intValue());
+			return Integer.valueOf(number.intValue());
 		}
 
 		return null;
