@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007 IBM Corporation and others.
+ * Copyright (c) 2007, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -22,8 +22,8 @@ import org.eclipse.core.internal.databinding.conversion.StringToNumberParser;
  * @since 1.0
  */
 public class NumberToIntegerValidator extends NumberToNumberValidator {
-	private static final Integer MIN = new Integer(Integer.MIN_VALUE);
-	private static final Integer MAX = new Integer(Integer.MAX_VALUE);
+	private static final Integer MIN = Integer.valueOf(Integer.MIN_VALUE);
+	private static final Integer MAX = Integer.valueOf(Integer.MAX_VALUE);
 
 	/**
 	 * @param converter
