@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2014 Angelo Zerr and others.
+ * Copyright (c) 2008, 2015 Angelo Zerr and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,6 +20,7 @@ import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.regex.Pattern;
 import org.eclipse.e4.ui.css.core.css2.CSS2ColorHelper;
 import org.eclipse.e4.ui.css.core.css2.CSS2RGBColorImpl;
 import org.eclipse.e4.ui.css.core.dom.properties.Gradient;
@@ -41,7 +42,7 @@ import org.w3c.dom.css.RGBColor;
 public class CSSSWTColorHelper {
 	public static final String COLOR_DEFINITION_MARKER = "#";
 
-	private static final String HEX_COLOR_VALUE_PATTERN = "#[a-fA-F0-9]{6}";
+	private static final Pattern HEX_COLOR_VALUE_PATTERN = Pattern.compile("#[a-fA-F0-9]{6}");
 
 	private static Field[] cachedFields;
 
@@ -91,7 +92,7 @@ public class CSSSWTColorHelper {
 
 	public static boolean hasColorDefinitionAsValue(String name) {
 		if (name.startsWith(COLOR_DEFINITION_MARKER)) {
-			return !name.matches(HEX_COLOR_VALUE_PATTERN);
+			return !HEX_COLOR_VALUE_PATTERN.matcher(name).matches();
 		}
 		return false;
 	}
@@ -198,7 +199,7 @@ public class CSSSWTColorHelper {
 			percent = (int) value
 			.getFloatValue(CSSPrimitiveValue.CSS_PERCENTAGE);
 		}
-		return new Integer(percent);
+		return Integer.valueOf(percent);
 	}
 
 	public static Gradient getGradient(CSSValueList list, Display display) {
@@ -267,7 +268,7 @@ public class CSSSWTColorHelper {
 		if (grad.getRGBs().size() == grad.getPercents().size() + 1) {
 			int[] percents = new int[grad.getPercents().size()];
 			for (int i = 0; i < percents.length; i++) {
-				int value = ((Integer) grad.getPercents().get(i)).intValue();
+				int value = (grad.getPercents().get(i)).intValue();
 				if (value < 0 || value > 100) {
 					// TODO this should be an exception because bad source
 					// format
