@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2009 Matthew Hall and others.
+ * Copyright (c) 2008, 2015 Matthew Hall and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -38,7 +38,7 @@ public abstract class WidgetIntValueProperty extends WidgetValueProperty {
 
 	@Override
 	protected Object doGetValue(Object source) {
-		return new Integer(doGetIntValue(source));
+		return Integer.valueOf(doGetIntValue(source));
 	}
 
 	@Override
