@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2010 IBM Corporation and others.
+ * Copyright (c) 2005, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -13,7 +13,6 @@ package org.eclipse.ui.internal.services;
 
 import java.util.HashMap;
 import java.util.Map;
-
 import org.eclipse.core.expressions.Expression;
 import org.eclipse.core.expressions.ExpressionInfo;
 import org.eclipse.ui.ISources;
@@ -114,7 +113,7 @@ public final class SourcePriorityNameMapping implements ISources {
 		}
 
 		if (!sourcePrioritiesByName.containsKey(sourceName)) {
-			final Integer priority = new Integer(sourcePriority);
+			final Integer priority = Integer.valueOf(sourcePriority);
 
 			sourcePrioritiesByName.put(sourceName, priority);
 		}
